@@ -460,6 +460,7 @@ void bahamut_cmd_join(char *user, char *channel, time_t chantime)
 	{
 		send_cmd(ServerName, "SJOIN %ld %s +nt :%s", (long int) chantime,
 		         channel, user);
+		/* TODO: This only works for a single automode */
 		if (AutoOp && AutoMode)
 			bahamut_cmd_mode(ServerName, user, AutoMode);
 	}
