@@ -594,6 +594,7 @@ void charybdis_cmd_join(char *user, char *channel, time_t chantime)
 	ud = find_uid(user);
 	send_cmd(NULL, "SJOIN %ld %s + :%s", (long int) chantime,
 	         channel, (ud ? ud->uid : user));
+	/* TODO: Add automode handler */
 }
 
 /*
