@@ -827,7 +827,7 @@ void inspircd_cmd_join(char *user, char *channel, time_t chantime)
 		for (i=0;i < strlen(AutoMode)-1;i++)
 		{
 			strlcat(buf, " ",sizeof(buf));
-			strlcat(buf, ud ? ud->uid : user, sizeof(buf));
+			strlcat(buf, user, sizeof(buf));
 		}
 		send_cmd(user, "MODE %s %s%s", channel, AutoMode, buf);
 	}
