@@ -532,6 +532,7 @@ void shadowircd_cmd_join(char *user, char *channel, time_t chantime)
 	ud = find_uid(user);
 	send_cmd(NULL, "SJOIN %ld %s + :%s", (long int) chantime,
 			 channel, (ud ? ud->uid : user));
+	/* TODO: Add AutoMode handler */
 }
 
 /*
